<resources>
    <string name="app_name">MyFinal</string>
    <string name="acceder">Acceder</string>
    <string name="registrarme">Registrarme</string>
    <string name="olvidec">Olvidé Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="boleta">No. Boleta</string>
    <string name="fechan">Fecha de nacimiento</string>
    <string name="genero">Género</string>
    <string name="edad">Edad</string>
    <string name="artista">Artista Fav</string>
    <string name="nombre">Nombre </string>
    <string name="preferencia">Animal Fav</string>
    <string name="Name">Nombre</string>
    <string name="firstName">Apellido Paterno</string>
    <string name="lastName">Apellido Materno</string>
    <string name="userName">Usuario</string>
    <string name="Mail">Correo</string>
    <string name="Password">Contraseña</string>
    <string name="writeName">Ingresar Nombre</string>
    <string name="writefirstName">Ingresar Apellido</string>
    <string name="writelastName">Ingresar Apellido</string>
    <string name="writeuserName">Ingresar Usuario</string>
    <string name="writeMail">Ingresar Correo</string>
    <string name="writePassword">Ingresar Contra</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="back">Volver</string>
    <string name="forgotPassword">Olvidé mi contraseña</string>
    <string name="recoverPassword">Recuperar contraseña</string>
    <string name="welcome">Bienvenid@</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="LlevarApi">API de Peliculas</string>
    <string name="menu_copiar">Cerrar Sesión</string>
    <string name="list_name">Cuenta</string>
    <string name="list_nameHint">Ingresar el nombre</string>
    <string name="list_pass">Contraseña</string>
    <string name="list_passHint">Ingresar la Contraseña</string>
    <string name="list_image">Seleccionar imagen</string>
    <string name="list_image1">Imagen1</string>
    <string name="list_image2">Imagen2</string>
    <string name="list_image3">Imagen3</string>
    <string name="list_image4">Imagen4</string>
    <string name="list_image5">Imagen Dispositivo</string>
    <string name="list_button">Agregar</string>
    <string name="list_button_takePhoto">Tomar Foto</string>
    <string name="list_button_selectPhoto">Seleccionar Img</string>
    <string name="list_button_next">Siguiente</string>
    <string name="list_button_back">Regresar</string>
    <string name="list_map_update">Actualizar</string>
    <string name="list_map_back">Volver</string>
    <string name="breaking_title">Random Breaking Bad Quotes</string>
    <string name="breaking_refresh">Recargar</string>
    <string name="breaking_return">Regresar</string>
    <string name="recovery_pass">Codigo</string>
    <string name="recovery_writepass">Ingresar Codigo Enviado</string>
    <string name="recovery_newpass1">Nueva Contraseña</string>
    <string name="recovery_writenewpass1">Ingresar la Nueva Contraseña</string>
    <string name="recovery_newpass2">Comprobar Nueva Contraseña</string>
    <string name="recovery_writenewpass2">Reingrese la Nueva Contraseña</string>
    <string name="recovery_button">Restablecer Contraseña</string>
</resources>